--- a/DecisionEngine/build.gradle
+++ b/DecisionEngine/build.gradle
@@ -53,3 +53,8 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+tasks.named("bootBuildImage") {
+    def imageNameProp = project.findProperty('imageName') ?: 'defaultImageName'
+    imageName = imageNameProp
+}
