INB | basic frontend setup and structure, created entities and REST controller for API

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -21,11 +21,10 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/assets/styles/styles.css"
             ],
             "scripts": []
           },
@@ -83,11 +82,10 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
-              "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/assets/styles/styles.css"
             ],
             "scripts": []
           }
