--- a/DecisionEngine/src/main/resources/application.yaml
+++ b/DecisionEngine/src/main/resources/application.yaml
@@ -16,12 +16,13 @@ spring:
           time_zone: Europe/Tallinn
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://${APP_DB_HOST:decisionengine-db}:${APP_DB_PORT:5432}/${APP_DB:decisionengine}
-    username: ${APP_DB_USER:engine_user}
+    url: jdbc:postgresql://${APP_DB_HOST:localhost}:${APP_DB_PORT:5332}/${APP_DB:decisionengine}
+    username: ${APP_DB_USER:root}
     password: ${APP_DB_PASSWORD:root}
   flyway:
-    locations: classpath:db/migration,classpath:db/data
+    locations: ../../../flyway/migration
     encoding: UTF-8
+    enabled: true
 
 management:
   endpoints:
