INB | requests from frontend to backend, display decision result to user

--- a/DecisionEngine/src/main/resources/application.yaml
+++ b/DecisionEngine/src/main/resources/application.yaml
@@ -39,3 +39,6 @@ springdoc:
     path: /api-docs
   swagger-ui:
     path: /decision-engine-swagger-ui.html
+    doc-expansion: none
+    syntax-highlight:
+      theme: monokai
