INB | fuulfilled README docs

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,33 +1,33 @@
 services:
-#  decision-engine-frontend:
-#    container_name: decision-engine-frontend
-#    build:
-#      context: ../frontend
-#      dockerfile: Dockerfile
-#    environment:
-#      API_HOST: http://decision-engine-backend:8081
-#    ports:
-#      - '4230:80'
-#    depends_on:
-#      - decision-engine-backend
+  decision-engine-frontend:
+    container_name: decision-engine-frontend
+    build:
+      context: ../frontend
+      dockerfile: Dockerfile
+    environment:
+      API_HOST: http://decision-engine-backend:8081
+    ports:
+      - '4230:80'
+    depends_on:
+      - decision-engine-backend
 
-#  decision-engine-backend:
-#    image: decision-engine-backend:latest
-#    hostname: decision-engine-backend
-#    container_name: decision_engine_backend
-#    environment:
-#      APP_PORT: 8081
-#      APP_DB_HOST: decisionengine-db
-#      APP_DB_PORT: 5432
-#      APP_DB: decisionengine
-#      APP_DB_USER: engine_user
-#      APP_DB_PASSWORD: root
-#    ports:
-#      - '8081:8081'
-#    networks:
-#      - decisionengine-net
-#    depends_on:
-#      - decisionengine-db
+  decision-engine-backend:
+    image: decision-engine-backend:latest
+    hostname: decision-engine-backend
+    container_name: decision_engine_backend
+    environment:
+      APP_PORT: 8081
+      APP_DB_HOST: decisionengine-db
+      APP_DB_PORT: 5432
+      APP_DB: decisionengine
+      APP_DB_USER: engine_user
+      APP_DB_PASSWORD: root
+    ports:
+      - '8081:8081'
+    networks:
+      - decisionengine-net
+    depends_on:
+      - decisionengine-db
 
   decisionengine-db:
     image: 'postgres:14'
@@ -58,13 +58,6 @@ services:
     command: migrate
     networks:
       - decisionengine-net
-#  rabbitmq:
-#    image: 'rabbitmq:latest'
-#    environment:
-#      - 'RABBITMQ_DEFAULT_PASS=secret'
-#      - 'RABBITMQ_DEFAULT_USER=myuser'
-#    ports:
-#      - '5672'
 
 volumes:
   postgres-decisionengine-data:
