--- a/frontend/nginx.conf.template
+++ b/frontend/nginx.conf.template
@@ -11,7 +11,7 @@ server {
     try_files $uri $uri/ /index.html$is_args$args;
   }
 
-  location /api {
+  location /api/ {
     proxy_pass ${API_HOST};
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_http_version 1.1;
